--- a/product/src/main/res/layout/fragment_product_detail.xml
+++ b/product/src/main/res/layout/fragment_product_detail.xml
@@ -9,7 +9,7 @@
         android:id="@+id/imgMainProduct"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@android:color/holo_blue_bright"
+        android:scaleType="fitXY"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintDimensionRatio="1:1"
